--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
-version: '3.5'
+version: "3"
 
 services: 
 
     db:
         image: postgres
+        container_name: db
         restart: always
+        ports: 
+            - "5432:5432"
         environment:
             POSTGRES_PASSWORD: postgres
             POSTGRES_USER: postgres
             POSTGRES_DB: db_ecoleta
-        volumes:
-            - ./pgdata:/var/lib/postgresql/data
-        ports: 
-            - "5432:5432"
-        networks:
-            - postgres-network
+        logging: 
+            driver: "json-file"
+            options: 
+                max-size: "10m"
+                max-file: "5"
 
     # pgadmin:
     #     image: dpage/pgadmin4
@@ -30,37 +32,42 @@ services:
     #         - postgres-network
 
     server:
-        build:
-            context: ./server/
-        #command: /usr/app/node_modules/.bin/nodemon src/index.js
-        command: npm start
+        image: node:12.18
+        container_name: server
+        restart: always
         volumes: 
-            - ./server/:/usr/app
-            - /usr/app/node_modules
+            - ./server/:/usr/app/
+        working_dir: /usr/app/
         ports: 
             - "3333:3333"
+        depends_on: 
+            - db
+        command: npm start
         environment: 
             - NODE_ENV=development
-            - CHOKIDAR_USEPOLLING=true
-        networks:
-            - postgres-network
         tty: true
+        logging: 
+            driver: "json-file"
+            options: 
+                max-size: "10m"
+                max-file: "5"
+        
     
     web:
-        build:
-            context: ./web/
-        command: npm start
+        image: node:12.18
+        container_name: web
+        restart: always
         volumes: 
-            - ./web/:/usr/app
-            - /usr/app/node_modules
-        depends_on: 
-            - server
+            - ./web/:/usr/app/
+        working_dir: /usr/app/
         ports: 
             - "3000:3000"
-        networks:
-            - postgres-network
+        depends_on: 
+            - server
+        command: npm start
         tty: true
-    
-networks: 
-    postgres-network:
-        driver: bridge
+        logging: 
+            driver: "json-file"
+            options: 
+                max-size: "10m"
+                max-file: "5"
