--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-leaflet": "^2.7.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -24,7 +29,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://server:3333",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -36,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/events": "^3.0.0",
+    "@types/react-leaflet": "^2.5.2",
+    "@types/react-router-dom": "^5.1.5"
   }
 }
